--- a/perfil.html
+++ b/perfil.html
@@ -475,7 +475,7 @@
     window.cerrarSesion = function() {
       signOut(auth).then(() => {
         alert('Sesión cerrada correctamente.');
-        window.location.href = 'home-web.html'; // Redirigir después de cerrar sesión
+        window.location.href = 'index.html'; // Redirigir después de cerrar sesión
       }).catch((error) => {
         console.error('Error al cerrar sesión:', error);
       });
