--- a/factura-pnto-del-dia.html
+++ b/factura-pnto-del-dia.html
@@ -301,6 +301,30 @@
       background-color: #00ccff;
       transform: scale(1.05);
     }
+
+    /* Alerta elegante */
+    .custom-alert {
+      display: none;
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background-color: #00cc88;
+      color: #1a1a1a;
+      padding: 15px 25px;
+      border-radius: 5px;
+      box-shadow: 0 0 20px rgba(0, 255, 204, 0.5);
+      z-index: 1000;
+      animation: slideIn 0.5s ease-out;
+    }
+
+    @keyframes slideIn {
+      from {
+        transform: translateX(100%);
+      }
+      to {
+        transform: translateX(0);
+      }
+    }
   </style>
 </head>
 <body>
@@ -363,178 +387,11 @@
     </div>
   </div>
 
+  <!-- Alerta elegante -->
+  <div id="customAlert" class="custom-alert">
+    Factura compartida exitosamente.
+  </div>
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
-    import {
-      getFirestore,
-      collection,
-      query,
-      where,
-      getDocs,
-      Timestamp,
-      doc,
-      getDoc,
-      addDoc,
-    } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDLi-egzQlgbKW8XV_qIhU6313Gd8gocCg",
-      authDomain: "inventario-35d6b.firebaseapp.com",
-      projectId: "inventario-35d6b",
-      storageBucket: "inventario-35d6b.appspot.com",
-      messagingSenderId: "266100399659",
-      appId: "1:266100399659:web:92358d28cbd803c8a7d46e",
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const auth = getAuth(app);
-
-    let currentUser = null;
-    let discount = 0;
-    let currentInvoiceId = null;
-
-    const getDiscount = async () => {
-      const discountRef = doc(db, "settings", "discount");
-      const discountDoc = await getDoc(discountRef);
-      if (discountDoc.exists()) {
-        discount = discountDoc.data().discount || 0;
-      } else {
-        discount = 0;
-      }
-    };
-
-    const formatDate = (timestamp) => {
-      const date = timestamp.toDate();
-      return date.toLocaleString("es-ES", {
-        year: "numeric",
-        month: "2-digit",
-        day: "2-digit",
-        hour: '2-digit',
-        minute: '2-digit',
-        hour12: false
-      });
-    };
-
-    const loadInvoiceHistory = async (filter = {}) => {
-      const invoiceBody = document.getElementById("invoiceBody");
-      invoiceBody.innerHTML = "";
-
-      if (!currentUser) return;
-
-      try {
-        const invoiceHistoryRef = collection(db, "users", currentUser.uid, "invoiceHistory");
-        let q = query(invoiceHistoryRef);
-
-        if (filter.user) {
-          q = query(invoiceHistoryRef, where("user", "==", filter.user));
-        }
-        if (filter.date) {
-          const startDate = Timestamp.fromDate(new Date(filter.date));
-          const endDate = Timestamp.fromDate(new Date(filter.date + "T23:59:59"));
-          q = query(invoiceHistoryRef, where("date", ">=", startDate), where("date", "<=", endDate));
-        }
-
-        const querySnapshot = await getDocs(q);
-
-        if (!querySnapshot.empty) {
-          querySnapshot.forEach((doc) => {
-            const invoiceData = doc.data();
-            const row = document.createElement("tr");
-
-            const userCell = document.createElement("td");
-            userCell.textContent = invoiceData.user;
-            row.appendChild(userCell);
-
-            const dateCell = document.createElement("td");
-            dateCell.textContent = formatDate(invoiceData.date);
-            row.appendChild(dateCell);
-
-            const paymentCell = document.createElement("td");
-            paymentCell.textContent = invoiceData.paymentType;
-            row.appendChild(paymentCell);
-
-            const totalCell = document.createElement("td");
-            const total = invoiceData.items.reduce((sum, item) => sum + (item.quantity * item.pricePerUnit), 0).toFixed(2);
-            totalCell.textContent = `DOP $${total}`;
-            row.appendChild(totalCell);
-
-            const detailsCell = document.createElement("td");
-            const button = document.createElement("button");
-            button.innerHTML = '<i class="fas fa-eye"></i>';
-            button.onclick = () => showDetails(doc.id);
-            detailsCell.appendChild(button);
-            row.appendChild(detailsCell);
-
-            invoiceBody.appendChild(row);
-          });
-        } else {
-          invoiceBody.innerHTML = `<tr><td colspan="5">No se encontraron facturas.</td></tr>`;
-        }
-      } catch (error) {
-        console.error("Error al cargar el historial de facturas:", error);
-      }
-    };
-
-    window.searchByUser = () => {
-      const user = document.getElementById("searchUser").value.trim();
-      if (user) {
-        loadInvoiceHistory({ user });
-      } else {
-        alert("Por favor, ingrese un nombre de usuario.");
-      }
-    };
-
-    window.searchByDate = () => {
-      const date = document.getElementById("searchDate").value;
-      if (date) {
-        loadInvoiceHistory({ date });
-      } else {
-        alert("Por favor, seleccione una fecha.");
-      }
-    };
-
-    window.clearSearch = () => {
-      document.getElementById("searchUser").value = "";
-      document.getElementById("searchDate").value = "";
-      loadInvoiceHistory();
-    };
-
-    window.showDetails = async (invoiceId) => {
-      currentInvoiceId = invoiceId;
-      const invoiceRef = doc(db, "users", currentUser.uid, "invoiceHistory", invoiceId);
-      const invoiceDoc = await getDoc(invoiceRef);
-
-      if (invoiceDoc.exists()) {
-        const currentInvoice = invoiceDoc.data();
-        const modal = document.getElementById("invoiceModal");
-        const modalUser = document.getElementById("modalUser");
-        const modalDate = document.getElementById("modalDate");
-        const modalPaymentType = document.getElementById("modalPaymentType");
-        const modalItems = document.getElementById("modalItems");
-        const modalSubtotal = document.getElementById("modalSubtotal");
-        const modalItbis = document.getElementById("modalItbis");
-        const modalAdditional = document.getElementById("modalAdditional");
-        const modalDiscount = document.getElementById("modalDiscount");
-        const modalTotal = document.getElementById("modalTotal");
-
-        modalUser.textContent = `Usuario: ${currentInvoice.user}`;
-        modalDate.textContent = `Fecha: ${formatDate(currentInvoice.date)}`;
-        modalPaymentType.textContent = `Método de Pago: ${currentInvoice.paymentType}`;
-
-        modalItems.innerHTML = "";
-        let subtotal = 0;
-        currentInvoice.items.forEach((item) => {
-          const itemTotal = item.quantity * item.pricePerUnit;
-          subtotal += itemTotal;
-          const itemDiv = document.createElement("p");
-          itemDiv.textContent = `${item.name} x ${item.quantity} - DOP $${itemTotal.toFixed(2)}`;
-          modalItems.appendChild(itemDiv);
-        });
-
-        const itbis = subtotal * 0.18;
-<script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
   import {
     getFirestore,
@@ -840,5 +697,5 @@
     }
   });
 </script>
-</body>
+ </body>
 </html>
