--- a/factura-pnto-del-dia.html
+++ b/factura-pnto-del-dia.html
@@ -391,6 +391,106 @@ tr.shared-invoice {
   background-color: #15a086;
   transition: background-color 0.5s ease;
 }
+
+/* Estilo para el botón de notificación flotante */
+#notificationButton {
+  display: none;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #15a086;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+/* Contador de notificaciones */
+#notificationCount {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: 12px;
+}
+
+/* Estilo para el modal de alerta */
+#alertModal {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #2c3e50;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1001;
+}
+
+/* Botón para cerrar el modal de alerta */
+/* Estilo para el botón de notificación flotante */
+#notificationButton {
+  display: none;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #16e086;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+/* Contador de notificaciones */
+#notificationCount {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: 12px;
+}
+
+/* Estilo para el modal de alerta */
+#alertModal {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #2c3e50;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1001;
+}
+
+/* Botón para cerrar el modal de alerta */
+#closeAlertModal {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #15a086;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
   </style>
 </head>
 <body>
@@ -458,12 +558,18 @@ tr.shared-invoice {
     Factura compartida exitosamente.
   </div>
   
-<div id="notificationModal" class="modal">
-  <div class="modal-content">
-    <p id="notificationMessage"></p>
-    <button id="notificationButton">Ver factura</button>
-  </div>
+  <!-- Botón flotante de notificaciones -->
+<button id="notificationButton">
+  <i class="fas fa-bell"></i>
+  <span id="notificationCount"></span>
+</button>
+
+<!-- Modal de alerta -->
+<div id="alertModal">
+  <p id="alertMessage"></p>
+  <button id="closeAlertModal" onclick="closeAlertModal()">Cerrar</button>
 </div>
+
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
@@ -497,6 +603,7 @@ tr.shared-invoice {
 
   let currentUser = null;
   let currentInvoiceId = null;
+  let unreadInvoicesCount = 0; // Contador de facturas sin leer
 
   const showAlert = (message) => {
     const alert = document.getElementById("customAlert");
@@ -554,12 +661,9 @@ tr.shared-invoice {
           const invoiceData = doc.data();
           const row = document.createElement("tr");
 
-          // Aplicar estilo si la factura fue compartida
-          if (invoiceData.sharedBy) {
-            row.style.backgroundColor = "#15a086"; // Color para facturas compartidas
-            setTimeout(() => {
-              row.style.backgroundColor = ""; // Quitar el color después de 30 segundos
-            }, 30000); // 30 segundos
+          // Aplicar estilo si la factura fue compartida y no ha sido vista
+          if (invoiceData.sharedBy && !invoiceData.viewed) {
+            row.style.backgroundColor = "#15a086"; // Color para facturas compartidas no leídas
           }
 
           const userCell = document.createElement("td");
@@ -684,6 +788,13 @@ tr.shared-invoice {
       }
 
       modal.style.display = "flex";
+
+      // Marcar la factura como vista
+      if (currentInvoice.sharedBy && !currentInvoice.viewed) {
+        await updateDoc(invoiceRef, { viewed: true });
+        loadInvoiceHistory(); // Recargar el historial para actualizar los estilos
+        updateUnreadCount(); // Actualizar el contador de facturas sin leer
+      }
     }
   };
 
@@ -758,10 +869,31 @@ tr.shared-invoice {
     }
   };
 
+  const updateUnreadCount = async () => {
+    if (!currentUser) return;
+
+    const invoiceHistoryRef = collection(db, "users", currentUser.uid, "invoiceHistory");
+    const q = query(invoiceHistoryRef, where("sharedBy", "!=", null), where("viewed", "==", false));
+    const querySnapshot = await getDocs(q);
+
+    unreadInvoicesCount = querySnapshot.size; // Actualizar el contador de facturas sin leer
+
+    const notificationButton = document.getElementById("notificationButton");
+    const notificationCount = document.getElementById("notificationCount");
+
+    if (unreadInvoicesCount > 0) {
+      notificationButton.style.display = "block";
+      notificationCount.textContent = unreadInvoicesCount;
+    } else {
+      notificationButton.style.display = "none";
+    }
+  };
+
   onAuthStateChanged(auth, async (user) => {
     if (user) {
       currentUser = user;
       loadInvoiceHistory();
+      updateUnreadCount();
 
       // Escuchar nuevas facturas compartidas en tiempo real
       const invoiceHistoryRef = collection(db, "users", currentUser.uid, "invoiceHistory");
@@ -772,16 +904,14 @@ tr.shared-invoice {
             const notificationSound = new Audio("notification.mp3");
             notificationSound.play();
 
-            const notificationIcon = document.getElementById("notificationIcon");
-            notificationIcon.style.display = "inline-block";
-            notificationIcon.innerHTML = '<span class="red-dot"></span>';
+            // Mostrar modal de alerta
+            const alertModal = document.getElementById("alertModal");
+            const alertMessage = document.getElementById("alertMessage");
+            alertMessage.textContent = `Tienes ${unreadInvoicesCount + 1} facturas nuevas.`;
+            alertModal.style.display = "flex";
 
-            // Marcar como vista al hacer clic
-            notificationIcon.onclick = async () => {
-              await updateDoc(doc(db, "users", currentUser.uid, "invoiceHistory", change.doc.id), { viewed: true });
-              notificationIcon.style.display = "none";
-              showDetails(change.doc.id);
-            };
+            // Actualizar el contador de facturas sin leer
+            updateUnreadCount();
           }
         });
       });
@@ -790,6 +920,12 @@ tr.shared-invoice {
       window.location.href = "login.html";
     }
   });
+
+  // Cerrar el modal de alerta
+  window.closeAlertModal = () => {
+    const alertModal = document.getElementById("alertModal");
+    alertModal.style.display = "none";
+  };
 </script>
  </body>
 </html>
