--- a/factura-pnto-del-dia.html
+++ b/factura-pnto-del-dia.html
@@ -12,16 +12,15 @@
       font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 20px;
-      background: linear-gradient(135deg, #1a1a1a, #2c3e50);
+      background: linear-gradient(135deg, #2c3e50, #2c3e50);
       color: #ecf0f1;
     }
 
     h1 {
       text-align: center;
-      color: #00ffcc;
+      color: #fff;
       font-size: 2.5em;
       margin-bottom: 20px;
-      text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
     }
 
     /* Contenedor de búsqueda */
@@ -36,7 +35,7 @@
     .search-container input {
       padding: 10px;
       font-size: 16px;
-      border: 2px solid #00ffcc;
+      border: 2px solid #15a086;
       border-radius: 5px;
       background-color: rgba(0, 0, 0, 0.5);
       color: #ecf0f1;
@@ -45,7 +44,7 @@
     }
 
     .search-container input:focus {
-      border-color: #00ccff;
+      border-color: #16e086;
     }
 
     .search-container button {
@@ -53,14 +52,14 @@
       font-size: 16px;
       border: none;
       border-radius: 5px;
-      background-color: #00ffcc;
-      color: #1a1a1a;
+      background-color: #15a086;
+      color: #fff;
       cursor: pointer;
       transition: background-color 0.3s ease, transform 0.3s ease;
     }
 
     .search-container button:hover {
-      background-color: #00ccff;
+      background-color: #16e086;
       transform: scale(1.05);
     }
 
@@ -81,8 +80,8 @@
     }
 
     th {
-      background-color: #00ffcc;
-      color: #1a1a1a;
+      background-color: #15a086;
+      color: #ff;
       font-weight: bold;
     }
 
@@ -122,7 +121,7 @@
     .modal-content h2 {
       text-align: center;
       font-size: 1.5em;
-      color: #00ffcc;
+      color: #15a086;
       margin-bottom: 10px;
     }
 
@@ -143,7 +142,7 @@
     .modal-content .close-modal button {
       padding: 5px 10px;
       font-size: 14px;
-      background-color: #00ffcc;
+      background-color: #15a086;
       color: #1a1a1a;
       border: none;
       border-radius: 5px;
@@ -152,25 +151,25 @@
     }
 
     .modal-content .close-modal button:hover {
-      background-color: #00ccff;
+      background-color: #16e086;
       transform: scale(1.05);
     }
 
     /* Botones de impresión y cierre */
     .modal-content .close-modal button.print {
-      background-color: #00ccff;
+      background-color: #15a086;
       margin-right: 10px;
     }
 
     .modal-content .close-modal button.print:hover {
-      background-color: #0099cc;
+      background-color: #16e086;
     }
 
     /* Efectos de hover en la tabla */
     tr td button {
       padding: 5px 10px;
       font-size: 14px;
-      background-color: #00ffcc;
+      background-color: #15a086;
       color: #1a1a1a;
       border: none;
       border-radius: 5px;
@@ -179,7 +178,7 @@
     }
 
     tr td button:hover {
-      background-color: #00ccff;
+      background-color: #16e086;
       transform: scale(1.05);
     }
 
@@ -217,7 +216,7 @@
     }
 
     .icon-button:hover {
-      color: #00ccff;
+      color: #16e086;
     }
 
     /* Modal de selección de usuario */
@@ -235,20 +234,19 @@
     }
 
     .user-modal-content {
-      background-color: #1a1a1a;
+      background-color: #2c3e50;
       padding: 20px;
       width: 400px;
       max-width: 90%;
       border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0, 255, 204, 0.5);
-      color: #ecf0f1;
+      color: #fff;
       position: relative;
     }
 
     .user-modal-content h2 {
       text-align: center;
       font-size: 1.5em;
-      color: #00ffcc;
+      color: #fff;
       margin-bottom: 10px;
     }
 
@@ -267,7 +265,7 @@
     }
 
     .user-item:hover {
-      background-color: rgba(0, 255, 204, 0.1);
+      background-color: rgba(21, 160, 134);
     }
 
     .user-item img {
@@ -289,7 +287,7 @@
     .close-user-modal button {
       padding: 5px 10px;
       font-size: 14px;
-      background-color: #00ffcc;
+      background-color: #15a086;
       color: #1a1a1a;
       border: none;
       border-radius: 5px;
@@ -298,7 +296,7 @@
     }
 
     .close-user-modal button:hover {
-      background-color: #00ccff;
+      background-color: #16e086;
       transform: scale(1.05);
     }
 
@@ -348,7 +346,7 @@
 button {
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #15a086;
   color: white;
   border: none;
   border-radius: 5px;
@@ -356,7 +354,7 @@ button {
 }
 
 button:hover {
-  background-color: #15a086;
+  background-color: #16e086;
 }
 
 
@@ -388,7 +386,7 @@ button:hover {
 
 /* Estilo para las filas de facturas compartidas */
 tr.shared-invoice {
-  background-color: #15a086;
+  background-color: #16e086;
   transition: background-color 0.5s ease;
 }
 
@@ -494,7 +492,7 @@ tr.shared-invoice {
   </style>
 </head>
 <body>
-  <h1>Historial de Facturas</h1>
+  <h1>FACTURAS</h1>
   <div class="search-container">
     <input type="text" id="searchUser" placeholder="Buscar por nombre de usuario">
     <input type="date" id="searchDate">
@@ -535,11 +533,10 @@ tr.shared-invoice {
       <div class="close-modal">
         <button class="print" onclick="printInvoice()"><i class="fas fa-print"></i></button>
         <button onclick="closeModal()"><i class="fas fa-times"></i></button>
-        <button onclick="openUserModal()"><i class="fas fa-share"></i></button>
+        <button onclick="openUserModal()"><i class="fa-solid fa-share-nodes"></i></button>
       </div>
     </div>
-  </div>
-
+  </div> 
   <!-- Modal de selección de usuario -->
   <div id="userModal" class="user-modal">
     <div class="user-modal-content">
@@ -663,7 +660,7 @@ tr.shared-invoice {
 
           // Aplicar estilo si la factura fue compartida y no ha sido vista
           if (invoiceData.sharedBy && !invoiceData.viewed) {
-            row.style.backgroundColor = "#15a086"; // Color para facturas compartidas no leídas
+            row.style.backgroundColor = "#2c3e50"; // Color para facturas compartidas no leídas
           }
 
           const userCell = document.createElement("td");
