--- a/factura-pnto-del-dia.html
+++ b/factura-pnto-del-dia.html
@@ -933,3 +933,90 @@ tr.shared-invoice {
 </script>
  </body>
 </html>
+
+
+
+ 
+ <style>
+    /* Estilos generales */
+    /* Botón flotante */
+    .floating-button {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: #15a086;
+      color: #fff;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      font-size: 24px;
+      cursor: pointer;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+      text-decoration: none;
+    }
+    .floating-button:hover {
+      transform: scale(1.1);
+      background-color: #16e086;
+    }
+
+    /* Estilo de enlaces ocultos */
+    .links {
+      position: fixed;
+      bottom: 100px;
+      right: 35px;
+      display: none;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .links a {
+      background-color: #16e086;
+      color: #fff;
+      padding: 10px 15px;
+      border-radius: 5px;
+      margin: 5px 0;
+      text-decoration: none;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      transition: background-color 0.3s;
+    }
+    .links a:hover {
+      background-color: #2c3e50;
+    }
+    .links a i {
+      margin-right: 8px;
+    }
+
+    /* Animación de despliegue de enlaces */
+    .show-links .links {
+      display: flex;
+      animation: fadeIn 0.3s ease-in-out;
+    }
+
+    /* Animación de aparición */
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
+  
+
+
+  <!-- Botón flotante -->
+<a href="factura-punto-ventas.html" class="floating-button" onclick="toggleLinks()">
+  <i class="fa-solid fa-file-invoice-dollar"></i>
+</a>
+
+  
+</div>
+</script>
