--- a/factura-pnto-del-dia.html
+++ b/factura-pnto-del-dia.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Historial de Facturas</title>
+  <title>Ventas del día</title>
   <!-- FontAwesome para iconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
@@ -492,7 +492,7 @@ tr.shared-invoice {
   </style>
 </head>
 <body>
-  <h1>FACTURAS</h1>
+  <h1>Ventas del día</h1>
   <div class="search-container">
     <input type="text" id="searchUser" placeholder="Buscar por nombre de usuario">
     <input type="date" id="searchDate">
