--- a/general-codigo.html
+++ b/general-codigo.html
@@ -3,155 +3,202 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Códigos de Barras Futurista</title>
+    <title>Generador de Códigos de Barras</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<style>
-    /* Estilos generales */
-    body {
-        font-family: 'Arial', sans-serif;
-        margin: 0;
-        padding: 0;
-        background: linear-gradient(135deg, #2c3e50, #2c3e50, #2c5364);
-        color: #e0e0e0;
-    }
+    <style>
+        /* Estilos generales */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #2c3e50, #2c3e50, #2c5364);
+            color: #e0e0e0;
+        }
 
-    .container {
-        max-width: 900px;
-        margin: 40px auto;
-        padding: 20px;
-        background: rgba(65, 95, 125, 0.8);
-        border-radius: 15px;
+        .container {
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 20px;
+            background: rgba(65, 95, 125, 0.8);
+            border-radius: 15px;
+        }
 
-    }
+        h1 {
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            color: #fff;
+        }
 
-    h1 {
-        text-align: center;
-        font-size: 2.5rem;
-        margin-bottom: 20px;
-        color: #fff;
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
 
-    }
+        label {
+            font-weight: bold;
+        }
 
-    /* Botón de generar código */
-    button {
-        display: block;
-        margin: 20px auto;
-        padding: 15px 30px;
-        font-size: 1rem;
-        font-weight: bold;
-        text-transform: uppercase;
-        background: linear-gradient(45deg, #15a086, #16e086);
-        color: #000;
-        border: none;
-        border-radius: 30px;
-        cursor: pointer;
-        transition: all 0.3s ease-in-out;
-    }
+        input, select {
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            font-size: 1rem;
+        }
 
-    button:hover {
-        transform: scale(1.1);
-        background: linear-gradient(45deg, #16e086, #15a086);
-    }
+        button {
+            display: block;
+            margin: 20px auto;
+            padding: 15px 30px;
+            font-size: 1rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            background: linear-gradient(45deg, #15a086, #16e086);
+            color: #000;
+            border: none;
+            border-radius: 30px;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+        }
 
-    /* Lista de códigos de barras */
-    .barcode-list {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        gap: 20px;
-        padding: 0;
-        list-style: none;
-    }
+        button:hover {
+            transform: scale(1.1);
+            background: linear-gradient(45deg, #16e086, #15a086);
+        }
 
-    /* Elemento de código de barras */
-    .barcode-item {
-        background: rgba(255, 255, 255, 0.1);
-        border: 1px solid rgba(22, 224, 134);
-        border-radius: 10px;
-        padding: 15px;
-        text-align: center;
+        .barcode-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 0;
+            list-style: none;
+        }
 
-        transition: transform 0.3s ease-in-out;
-    }
+        .barcode-item {
+            background: white;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            transition: transform 0.3s ease-in-out;
+            color: black;
+            width: 100%;
+            box-sizing: border-box;
+        }
 
-    .barcode-item:hover {
-        transform: translateY(-10px);
-    }
+        .barcode-item:hover {
+            transform: translateY(-10px);
+        }
 
-    canvas {
-        background-color: white;
-        margin: 10px auto;
-        display: block;
-        border-radius: 5px;
-    }
+        canvas {
+            background-color: white;
+            margin: 10px auto;
+            display: block;
+            border-radius: 5px;
+            width: 100%;
+            height: auto;
+        }
 
-    .download-btn {
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 0.9rem;
-        font-weight: bold;
-        background: linear-gradient(45deg, #16e086, #16e086);
-        color: #fff;
-        border: none;
-        border-radius: 20px;
-        cursor: pointer;
-        transition: all 0.3s ease-in-out;
-    }
+        .download-btn {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 0.9rem;
+            font-weight: bold;
+            background: linear-gradient(45deg, #16e086, #16e086);
+            color: #fff;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+        }
 
-    .download-btn:hover {
-        background: linear-gradient(45deg, #15a086, #16e086);
- 
-    }
+        .download-btn:hover {
+            background: linear-gradient(45deg, #15a086, #16e086);
+        }
 
-    /* Desactivar la selección de texto y el efecto de arrastre en todos los elementos */
-    * {
-        -webkit-user-select: none; /* Safari */
-        -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* IE 10+ */
-        user-select: none; /* estándar */
-        -webkit-user-drag: none; /* Safari */
-        -khtml-user-drag: none; /* Konqueror HTML */
-        -moz-user-drag: none; /* Firefox */
-        -o-user-drag: none; /* Opera */
-        user-drag: none; /* estándar */
-    }
+        .back-button {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            background-color: #16a085;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            transition: background-color 0.3s;
+            z-index: 1000;
+        }
 
-    .back-button {
-        position: fixed;
-        top: 10px; /* Distancia desde la parte superior */
-        left: 10px; /* Distancia desde el borde izquierdo */
-        background-color: #16a085; /* Color de fondo */
-        color: #fff; /* Color del texto y del icono */
-        border: none;
-        border-radius: 4px;
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        transition: background-color 0.3s; /* Transición suave para el color de fondo */
-        z-index: 1000; /* Asegura que el botón esté sobre otros elementos */
-    }
+        .back-button i {
+            margin-right: 8px;
+        }
 
-    .back-button i {
-        margin-right: 8px; /* Espacio entre el icono y el texto */
-    }
+        .back-button:hover {
+            background-color: #2c2e50;
+        }
 
-    .back-button:hover {
-        background-color: #2c2e50; /* Color de fondo al pasar el ratón */
-    }
+        .barcode-data {
+            margin: 10px 0;
+            font-size: 1rem;
+        }
 
-</style>
+        .barcode-data p {
+            margin: 5px 0;
+            font-size: 1rem; /* Tamaño fijo para el texto */
+        }
 
+        .price {
+            font-size: 1.5rem; /* Tamaño fijo para el precio */
+            font-weight: bold;
+            color: #000;
+            margin-top: 10px;
+        }
+
+        .barcode-container {
+            width: 100%;
+            max-width: 300px; /* Ancho fijo para el contenedor */
+            margin: 0 auto;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body>
-
-        <button class="back-button" onclick="goBack()">
+    <button class="back-button" onclick="goBack()">
         <i class="fas fa-arrow-left"></i> Volver
-    </button> 
-    
+    </button>
+
     <div class="container">
         <h1>Generador de Códigos de Barras</h1>
-        <button onclick="generarCodigo()">Generar Código</button>
+        <form id="barcode-form">
+            <label for="product-name">Nombre del Producto:</label>
+            <input type="text" id="product-name" required>
+
+            <label for="product-price">Precio del Producto:</label>
+            <input type="number" id="product-price" required>
+
+            <label for="company-name">Nombre de la Empresa:</label>
+            <input type="text" id="company-name" required>
+
+            <label for="company-rcn">RNC de la Empresa (opcional):</label>
+            <input type="text" id="company-rcn">
+
+            <label for="digits">Número de Dígitos del Código:</label>
+            <select id="digits">
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="8">8</option>
+                <option value="14">14</option>
+            </select>
+
+            <button type="button" onclick="generarCodigo()">Generar Código</button>
+        </form>
         <ul class="barcode-list" id="barcode-list"></ul>
     </div>
 
@@ -162,9 +209,15 @@
         const codigosGenerados = new Set();
 
         function generarCodigo() {
-            let codigo = generarCodigoAleatorio();
+            const productName = document.getElementById('product-name').value;
+            const productPrice = document.getElementById('product-price').value;
+            const companyName = document.getElementById('company-name').value;
+            const companyRcn = document.getElementById('company-rcn').value;
+            const digits = parseInt(document.getElementById('digits').value);
+
+            let codigo = generarCodigoAleatorio(digits);
             while (codigosGenerados.has(codigo)) {
-                codigo = generarCodigoAleatorio();
+                codigo = generarCodigoAleatorio(digits);
             }
             codigosGenerados.add(codigo);
 
@@ -172,78 +225,77 @@
             const li = document.createElement('li');
             li.classList.add('barcode-item');
 
+            // Crear un contenedor para el código de barras y los datos
+            const barcodeContainer = document.createElement('div');
+            barcodeContainer.classList.add('barcode-container');
+
+            // Agregar el nombre de la empresa y el RNC en la parte superior
+            const companyInfo = document.createElement('div');
+            companyInfo.classList.add('barcode-data');
+            companyInfo.innerHTML = `
+                <p><strong>${companyName}</strong></p>
+                ${companyRcn ? `<p><strong>RNC:</strong> ${companyRcn}</p>` : ''}
+                <p><strong>Producto:</strong> ${productName}</p> <!-- Nombre del producto agregado aquí -->
+            `;
+            barcodeContainer.appendChild(companyInfo);
+
             // Crear un canvas para el código de barras
             const canvas = document.createElement('canvas');
             canvas.id = `barcode-${codigo}`;
             JsBarcode(canvas, codigo, {
-                format: "EAN13",
-                displayValue: true,
+                format: "CODE128",
+                displayValue: true, // Mostrar el valor numérico debajo del código de barras
                 lineColor: "#000000",
                 background: "#ffffff",
-                height: 100,
+                height: 50,
                 margin: 10,
                 width: 2
             });
+            barcodeContainer.appendChild(canvas);
+
+            // Agregar el precio en la parte inferior
+            const priceInfo = document.createElement('div');
+            priceInfo.classList.add('price');
+            priceInfo.innerHTML = `
+                <p>DOP$${parseFloat(productPrice).toLocaleString('en-US', { minimumFractionDigits: 2 })}</p>
+            `;
+            barcodeContainer.appendChild(priceInfo);
 
             // Crear botón de descarga
             const downloadButton = document.createElement('button');
             downloadButton.textContent = 'Descargar PNG';
             downloadButton.classList.add('download-btn');
-            downloadButton.onclick = () => descargarCodigo(canvas, codigo);
+            downloadButton.onclick = () => descargarCodigo(barcodeContainer, codigo);
 
-            // Agregar el canvas y el botón al elemento
-            li.appendChild(canvas);
+            // Agregar el contenedor y el botón al elemento
+            li.appendChild(barcodeContainer);
             li.appendChild(downloadButton);
 
             // Agregar el elemento a la lista
             lista.appendChild(li);
         }
 
-        function generarCodigoAleatorio() {
-            const codigo = [];
-            while (codigo.length < 12) {
-                codigo.push(Math.floor(Math.random() * 10));
+        function generarCodigoAleatorio(digits) {
+            let codigo = '';
+            for (let i = 0; i < digits; i++) {
+                codigo += Math.floor(Math.random() * 10);
             }
-            const base = codigo.join('');
-            const checksum = calcularChecksum(base);
-            return base + checksum;
+            return codigo;
         }
 
-        function calcularChecksum(codigoBase) {
-            let suma = 0;
-            for (let i = 0; i < codigoBase.length; i++) {
-                suma += parseInt(codigoBase[i]) * (i % 2 === 0 ? 1 : 3);
-            }
-            return (10 - (suma % 10)) % 10;
-        }
-
-        function descargarCodigo(canvas, codigo) {
+        function descargarCodigo(element, codigo) {
             const link = document.createElement('a');
             link.download = `${codigo}.png`;
-            link.href = canvas.toDataURL();
-            link.click();
+            html2canvas(element).then(canvas => {
+                link.href = canvas.toDataURL();
+                link.click();
+            });
         }
-    </script>
-</body>
-</html>
 
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <script>
         function goBack() {
             window.history.back();
         }
-    </script>
 
-
-
-
-
-     
-
-
-  <!-- BLOQUEO DE CLIC DERECHO, F12 ETC. -->
-
-  <script>
         // Bloquear el clic derecho
         document.addEventListener('contextmenu', function(e) {
             e.preventDefault();
@@ -251,56 +303,12 @@
 
         // Bloquear teclas específicas (F12, Ctrl+Shift+I, Ctrl+U)
         document.addEventListener('keydown', function(e) {
-            // F12
-            if (e.key === "F12") {
-                e.preventDefault();
-            }
-
-            // Ctrl+Shift+I (inspeccionar)
-            if (e.ctrlKey && e.shiftKey && e.key === 'I') {
-                e.preventDefault();
-            }
-
-            // Ctrl+U (ver código fuente)
-            if (e.ctrlKey && e.key === 'u') {
-                e.preventDefault();
-            }
-
-            // Ctrl+Shift+J (consola)
-            if (e.ctrlKey && e.shiftKey && e.key === 'J') {
+            if (e.key === "F12" || (e.ctrlKey && e.shiftKey && e.key === 'I') || (e.ctrlKey && e.key === 'u') || (e.ctrlKey && e.shiftKey && e.key === 'J')) {
                 e.preventDefault();
             }
         });
     </script>
-
-
-<!-- LOGUIADOS -->
-
-
-<script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
-
-    const firebaseConfig = {
-        apiKey: "AIzaSyDLi-egzQlgbKW8XV_qIhU6313Gd8gocCg",
-        authDomain: "inventario-35d6b.firebaseapp.com",
-        projectId: "inventario-35d6b",
-        storageBucket: "inventario-35d6b.appspot.com",
-        messagingSenderId: "266100399659",
-        appId: "1:266100399659:web:92358d28cbd803c8a7d46e",
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    // Verifica si el usuario está autenticado
-    onAuthStateChanged(auth, user => {
-        if (!user) {
-            // Si el usuario no está autenticado, redirigir a index.html
-            window.location.href = "index.html";
-        } else {
-            // El usuario está autenticado, puedes mostrar contenido o permitir acceso a la página
-            console.log("Usuario autenticado:", user);
-        }
-    });
-</script>
+    <!-- Librería html2canvas para descargar el contenido como imagen -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+</body>
+</html>
